# y3_cluster_cpp

./: .clang-format  .cmake-format.yaml  .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  clean  example_module.cpp  gamma_t.hh  generate-pprof-pdf.sh  generate-sample-variance-pprof-pdf.sh  generate_module.hh  integration_range.hh  pseudocode_for_module.md  y3_clusters_module.cpp
deltasigma/: CMakeLists.txt  deltasigma.ini  deltasigma.py  deltasigma_cpp.ini  deltasigma_test.ini  nfw.cc  values.ini
deltasigma/OUTPUT/cmb_cl/: ee.txt  te.txt  tt.txt
deltasigma/OUTPUT/cosmological_parameters/: bias.txt  deltasigma_2.txt  r_perp.txt  values.txt
deltasigma/OUTPUT/deltasigma/: bias.txt  lnm.txt
deltasigma/OUTPUT/distances/: a.txt  d_a.txt  d_l.txt  d_m.txt  h.txt  mu.txt  values.txt
deltasigma/OUTPUT/linear_cdm_transfer/: k_h.txt
deltasigma/OUTPUT/matter_power_lin/: p_k.txt
deltasigma/OUTPUT/matter_power_nl/: k_h.txt  p_k.txt
deltasigma/deltasigma/cmb_cl/: ee.txt  tt.txt
deltasigma/deltasigma/cosmological_parameters/: bias.txt  deltasigma_2.txt
deltasigma/deltasigma/distances/: d_l.txt  mu.txt  (+1 more)
deltasigma/src/: CMakeLists.txt  deltasigma.cc  halo_2.hh  nfw.hh
deltasigma/test/: CMakeLists.txt  DS_14.5.txt  DS_14.5_2halo.txt  DS_14.5_nfw.txt  Sigma_14.5_2halo.txt  Sigma_14.5_nfwonly.txt  Sigma_mm_2halo.txt  Sigma_nfwonly.txt  bias.txt  deltasigma_test.py  generate_test_files.py  xi_2halo.txt  xi_mm_2halo.txt  xi_nfwonly.txt
src/: .gitignore  CMakeLists.txt  CosmoSISIntegrationModule.hh  CosmosisIntegrationModule.hh  ExampleIntegrand.cc  ExampleIntegrand.hh  ExampleIntegration_module.cc  a_cen_t.hh  a_mis_t.hh  bessel_polynomial_integral.cc  bessel_polynomial_integral.hh  bmz_t.hh  cluster_abundance.cc  cluster_abundance.py  cluster_abundance_covariance.cc  clusters_module.hh  datablock_reader.hh  default_cluster_abundance.cc  default_models.hh  del_sig_sum.hh  del_sig_t.hh  del_sig_tom.hh  dv_do_dz_t.hh  example_module.cc  ez.hh  fits_loader.hh  fpsupport.hh  gamma_t.hh  generate_module.hh  hmb_t.hh  hmf_t.hh  int_zo_zt_t.hh  integration_range.hh  interp_1d.hh  interp_2d.cc  interp_2d.hh  lc_lt_t.cc  lc_lt_t.hh  lc_lt_t2.hh  lc_lt_t_des.cc  (+33 more)
src/cython/: .gitignore  CMakeLists.txt  __init__.py  cluster_abundance.pxd  cluster_abundance.pyx  cluster_abundance_skel.pxd  cluster_abundance_skel.pyx  integrand_interface_skel.pyx  setup.py
src/models/: CMakeLists.txt  a_cen_t.hh  a_mis_t.hh  angle_to_dist_t.hh  average_sci_t.hh  default_models.hh  del_sig_sum.hh  del_sig_t.hh  del_sig_tom.hh  del_sig_y1.hh  dsigma_full.cuh  dsigma_mis.cuh  dsigma_mis_joint.cuh  dsigma_misc.cuh  dsigma_misc.hh  dsigma_prj.cuh  dsigma_proj.cuh  dv_do_dz_t.cuh  dv_do_dz_t.hh  emg_des_t.cuh  ez.cuh  ez.hh  ez_sq.cuh  ez_sq.hh  gamma_max.cuh  gamma_max.hh  hmb_t.hh  hmf_sz_t.cuh  hmf_t.cuh  hmf_t.hh  hmf_t_sz.cuh  int_lc_lt_des_f.cuh  int_lc_lt_des_t.cc  int_lc_lt_des_t.cu  int_lc_lt_des_t.cuh  int_lc_lt_des_t.hh  int_lc_lt_des_t2.cuh  int_lc_lt_des_t2.hh  int_lc_lt_des_t3.cuh  int_lo_lt_des_t.cc  (+92 more)
src/modules/: .gitignore  AbundanceIntegralDESxSPTModule.cc  AbundanceIntegralMLamtrue_DESxSPTModule.cc  AbundanceIntegralZtrue_DESxSPTModule.cc  CMakeLists.txt  CompleteDESxSPTLikelihoodModule.py  ConvertLogParams_DESxSPTModule.py  ExampleIntegrand.cc  ExampleIntegrand.hh  ExampleIntegrand.test.cc  ExampleIntegration_module.cc  ExampleOneDIntegrand.test.cc  ExampleOneDIntegration_module.cc  ExampleScalarIntegrand.cc  ExampleScalarIntegrand.hh  ExampleScalarIntegrand.test.cc  ExampleScalarIntegration_module.cc  ExampleVectorIntegrand.cc  ExampleVectorIntegrand.hh  ExampleVectorIntegrand.test.cc  ExampleVectorIntegration_module.cc  Mass_miscent_y1_scalarintegrand.cc  MattsExampleScalarIntegrand.cc  NC_cent_y1_scalarintegrand.cc  NC_miscent_y1_scalarintegrand.cc  SelectionIntegralDESxSPTModule.cc  Snapshotsim_ScalarIntegrand.cc  Snapshotsim_ScalarIntegrand_NC.cc  Snapshotsim_ScalarIntegrand_Sigma.cc  ZtrueIntegralDESxSPTModule.cc  average_sigma_crit_inv.ini  average_sigma_crit_inv.py  average_sigma_crit_inv_values.ini  buzzard_sigma_halos.cc  cluster_abundance_covariance.cc  compton_y_sims.cc  default_cluster_abundance.cc  deltasigma.ini  kappa_cent_y1.cc  kappa_miscent_y1.cc  (+13 more)
src/utils/: CMakeLists.txt  CosmoSISIntegrationModule.hh  CosmoSISSICUDAModule.hh  CosmoSISScalarEvaluatorModule.hh  CosmoSISScalarIntegrationModule.hh  CosmoSISVectorIntegrationModule.hh  OneDIntegrationModule.hh  bessel_polynomial_integral.cc  bessel_polynomial_integral.hh  clusters_module.hh  cuda_interp_1d.cu  cuda_interp_1d.cuh  cuda_interp_2d.cu  cuda_interp_2d.cuh  cuda_module_macros.cuh  datablock_reader.cc  datablock_reader.hh  debugging.cc  debugging.hh  fits_loader.cc  fits_loader.hh  fpsupport.hh  generate_module.hh  gpu_integrator.cuh  integration_range.hh  interp_1d.cc  interp_1d.hh  interp_2d.cc  interp_2d.hh  make_cuda_integration_volumes.cuh  make_grid_points.hh  make_ifstream.cc  make_ifstream.hh  make_integration_volumes.hh  make_interp_1d.cuh  make_interp_1d.hh  make_interp_2d.cuh  make_interp_2d.hh  mem_tracking_sentry.hh  meta.hh  (+18 more)
test/: .gitignore  CMakeLists.txt  ExampleIntegrand.test.cc  README.md  a_cen_t.hh  a_mis_t.hh  a_t_cen_t.test.cc  bessel_analytic_integral.test.cc  bessel_integral_equivalence.test.cc  clusters_module.hh  cuda_interp_1d.test.cu  cuda_interp_2d.test.cu  d_a.txt  d_a_test.txt  default_models.hh  del_sig_cen_t.hh  del_sig_cen_y1.hh  del_sig_mis_t.hh  del_sig_t.hh  deltasigma_m_h.txt  dndlnmh.txt  dv_do_dz_t.hh  dv_do_dz_t.test.cc  example_module.cc  ez.hh  ez.test.cc  ez_sq.hh  ez_sq.test.cc  fpsupport.hh  fpsupport.test.cc  get_grid_axes_from_datablock.test.cc  hmf_t.hh  hmf_t.test.cc  int_lc_lt_des_f_test.test.cu  int_lc_lt_des_t_test.test.cu  int_pxizeta.test.cc  int_zo_zt_des_t.test.cc  integer_pow.test.cc  integrand.test.cc  integrate_delta_sigma.cc  (+85 more)
test/sample_variance_output/: plot_bessel_sums.py  plot_matter_power.py
xi_hm/src/: CMakeLists.txt  datablock_reader.cc  del_sig_y3.hh  interp_1d.cc  nfw.hh  sig_y3.hh  xihm.cc  xihm.hh  xinl.hh
(+658 files in other folders)
